Move automation to gui editor

--- a/packages/cats/litterboxes.yaml
+++ b/packages/cats/litterboxes.yaml
@@ -1,35 +1,35 @@
-## Automations regarding this have moved to Appdaemon
+# ## Automations regarding this have moved to Appdaemon
 
-homeassistant:
-  customize:
-    counter.all_litterbox_visits_today:
-      icon: mdi:emoticon-poop
-      friendly_name: All Litterbox Visits Today
-    ## Upstairs
-    counter.litterbox_upstairs_visits:
-      icon: mdi:emoticon-poop
-      friendly_name: Upstairs Litterbox Visits
-    binary_sensor.motion_sensor_158d0001a66291:
-      friendly_name: Upstairs Litterbox
-      hidden: true
-    sensor.illumination_158d0001a66291:
-      friendly_name: Isas Room Lux
-      icon: mdi:theme-light-dark
-    binary_sensor.switch_158d0001a6687f:
-      friendly_name: Upstairs litterbox switch
+# homeassistant:
+#   customize:
+#     counter.all_litterbox_visits_today:
+#       icon: mdi:emoticon-poop
+#       friendly_name: All Litterbox Visits Today
+#     ## Upstairs
+#     counter.litterbox_upstairs_visits:
+#       icon: mdi:emoticon-poop
+#       friendly_name: Upstairs Litterbox Visits
+#     binary_sensor.motion_sensor_158d0001a66291:
+#       friendly_name: Upstairs Litterbox
+#       hidden: true
+#     sensor.illumination_158d0001a66291:
+#       friendly_name: Isas Room Lux
+#       icon: mdi:theme-light-dark
+#     binary_sensor.switch_158d0001a6687f:
+#       friendly_name: Upstairs litterbox switch
 
-    ## Downstairs
-    counter.litterbox_downstairs_visits:
-      icon: mdi:emoticon-poop
-      friendly_name: Downstairs Litterbox Visits
-    binary_sensor.motion_sensor_158d0001a24ef1:
-      hidden: true
-      friendly_name: Downstairs Litterbox
-    sensor.illumination_158d0001a24ef1:
-      friendly_name: Downstairs Litterbox Lux
-      icon: mdi:theme-light-dark
-    binary_sensor.switch_158d0001b8f876:
-      friendly_name: Downstairs litterbox switch
+#     ## Downstairs
+#     counter.litterbox_downstairs_visits:
+#       icon: mdi:emoticon-poop
+#       friendly_name: Downstairs Litterbox Visits
+#     binary_sensor.motion_sensor_158d0001a24ef1:
+#       hidden: true
+#       friendly_name: Downstairs Litterbox
+#     sensor.illumination_158d0001a24ef1:
+#       friendly_name: Downstairs Litterbox Lux
+#       icon: mdi:theme-light-dark
+#     binary_sensor.switch_158d0001b8f876:
+#       friendly_name: Downstairs litterbox switch
 
 
 #-------------------------------------------
@@ -83,14 +83,21 @@ input_select:
       - Dirty
       - Cleaning
     icon: mdi:paw
-#-------------------------------------------
-
-automation:
-  - alias: '[Cats] Litterbox All Counter Reset At Midnight'
-    initial_state: 'on'
-    trigger:
-      - platform: time
-        at: '23:59:00'
-    action:
-      - service: counter.reset
-        entity_id: counter.all_litterbox_visits_today
+sensor:
+  - platform: template
+    sensors:
+      upstairs_litterbox_visits:
+        friendly_name: "Upstairs Litterbox Visits"
+        unit_of_measurement: 'visit(s)'
+        value_template: "{{ states('counter.litterbox_upstairs_visits') }}"
+      downstairs_litterbox_visits:
+        friendly_name: "Downstairs Litterbox Visits"
+        unit_of_measurement: 'visit(s)'
+        value_template: "{{ states('counter.litterbox_downstairs_visits') }}"
+camera:
+  - platform: mjpeg
+    mjpeg_url: !secret upstairs_litterbox_url
+    name: Upstairs Litterbox
+    username: !secret upstairs_litterbox_username
+    password: !secret upstairs_litterbox_password
+    verify_ssl: false
